--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconoir/vue": "^7.10.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "pinia": "^2.2.6",
