--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@iconoir/vue": "^7.10.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
+    "express": "^4.21.1",
     "firebase": "^11.0.2",
+    "jsonwebtoken": "^9.0.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
