--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "firebase": "^11.0.2",
+    "marked": "^15.0.3",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
