--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     ],
     "*.vue": [
       "eslint --fix",
-      "prettier --write",
-      "stylelint --fix"
+      "prettier --write"
     ],
     "*.{scss,less,styl,html}": [
       "stylelint --fix",
@@ -60,6 +59,7 @@
     "lint-staged": "^15.2.11",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "stylelint": "^16.12.0",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
