fix: update all methods affected by userGetAPI changes

--- a/.env
+++ b/.env
@@ -9,4 +9,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=426188985322
 VITE_FIREBASE_APP_ID=1:426188985322:web:94d7e4b003a13e8c3c5893
 VITE_FIREBASE_MEASUREMENT_ID=G-0ESWEH0N90
 
-VITE_API_BASE_URL=https://joitogetherbackend-production-5e45.up.railway.app/
+VITE_API_BASE_URL=http://localhost:3030
+# VITE_API_BASE_URL=https://joitogetherbackend-production-5e45.up.railway.app/
