--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "firebase": "^11.0.2",
-    "marked": "^15.0.3",
+    "marked": "^15.0.5",
     "naive-ui": "^2.40.4",
     "pinia": "^2.2.6",
     "socket.io-client": "^4.8.1",
@@ -59,6 +59,7 @@
     "lint-staged": "^15.2.11",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "raw-loader": "^4.0.2",
     "stylelint": "^16.12.0",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
