--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pinia": "^2.2.6",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.12",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
